{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 69,
  "lineage": "f6d6e646-05f5-5f5f-863b-246ec6bc1dcf",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b703cc9dc95b0360",
            "domain": "vpc",
            "id": "eipalloc-0b703cc9dc95b0360",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-233-44-74.compute-1.amazonaws.com",
            "public_ip": "3.233.44.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sftsrv_ire_test-testing-us-east-1a"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039764396d7e5dfd1",
            "domain": "vpc",
            "id": "eipalloc-039764396d7e5dfd1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-233-139-57.compute-1.amazonaws.com",
            "public_ip": "3.233.139.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sftsrv_ire_test-testing-us-east-1b"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-us-east-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:internet-gateway/igw-0a37d5c74fdea837a",
            "id": "igw-0a37d5c74fdea837a",
            "owner_id": "540544476234",
            "tags": {
              "Name": "sftsrv_ire_test-testing"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing"
            },
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b703cc9dc95b0360",
            "connectivity_type": "public",
            "id": "nat-073ab344bf55c9d73",
            "network_interface_id": "eni-0de631d76850d1cdc",
            "private_ip": "10.0.101.155",
            "public_ip": "3.233.44.74",
            "subnet_id": "subnet-03da6adfe29bb184b",
            "tags": {
              "Name": "sftsrv_ire_test-testing-us-east-1a"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039764396d7e5dfd1",
            "connectivity_type": "public",
            "id": "nat-088fc2d23cbb5292a",
            "network_interface_id": "eni-0653aacdf97981ec5",
            "private_ip": "10.0.102.192",
            "public_ip": "3.233.139.57",
            "subnet_id": "subnet-0a0f1ddb2e894c95c",
            "tags": {
              "Name": "sftsrv_ire_test-testing-us-east-1b"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078bf7592db591e891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-073ab344bf55c9d73",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078bf7592db591e89",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0394f83a91bfdf56f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-088fc2d23cbb5292a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0394f83a91bfdf56f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a37d5c74fdea837a",
            "id": "r-rtb-0fa83d33244ba47001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa83d33244ba4700",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:route-table/rtb-030d255846fdf831d",
            "id": "rtb-030d255846fdf831d",
            "owner_id": "540544476234",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sftsrv_ire_test-testing-intra"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:route-table/rtb-078bf7592db591e89",
            "id": "rtb-078bf7592db591e89",
            "owner_id": "540544476234",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sftsrv_ire_test-testing-private-us-east-1a"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:route-table/rtb-0394f83a91bfdf56f",
            "id": "rtb-0394f83a91bfdf56f",
            "owner_id": "540544476234",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sftsrv_ire_test-testing-private-us-east-1b"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:route-table/rtb-0fa83d33244ba4700",
            "id": "rtb-0fa83d33244ba4700",
            "owner_id": "540544476234",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sftsrv_ire_test-testing-public"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ad587db304a4ca4",
            "route_table_id": "rtb-030d255846fdf831d",
            "subnet_id": "subnet-0c8c30bb87a6f7190"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0671f630cbaa5c203",
            "route_table_id": "rtb-030d255846fdf831d",
            "subnet_id": "subnet-005b3e6dd972824f2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c173be984481c531",
            "route_table_id": "rtb-078bf7592db591e89",
            "subnet_id": "subnet-09e85f18787181f1c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d1a2073e242797a",
            "route_table_id": "rtb-0394f83a91bfdf56f",
            "subnet_id": "subnet-011e30fc00af6b0e9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6cfc8f1d6464bad",
            "route_table_id": "rtb-0fa83d33244ba4700",
            "subnet_id": "subnet-03da6adfe29bb184b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3d2aa4d56f21314",
            "route_table_id": "rtb-0fa83d33244ba4700",
            "subnet_id": "subnet-0a0f1ddb2e894c95c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:subnet/subnet-0c8c30bb87a6f7190",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.51.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8c30bb87a6f7190",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540544476234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sftsrv_ire_test-testing-intra-us-east-1a"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-intra-us-east-1a"
            },
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:subnet/subnet-005b3e6dd972824f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005b3e6dd972824f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540544476234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sftsrv_ire_test-testing-intra-us-east-1b"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-intra-us-east-1b"
            },
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:subnet/subnet-09e85f18787181f1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e85f18787181f1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540544476234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sftsrv_ire_test-testing-private-us-east-1a"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-private-us-east-1a"
            },
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:subnet/subnet-011e30fc00af6b0e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011e30fc00af6b0e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540544476234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sftsrv_ire_test-testing-private-us-east-1b"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-private-us-east-1b"
            },
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:subnet/subnet-03da6adfe29bb184b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03da6adfe29bb184b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540544476234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sftsrv_ire_test-testing-public-us-east-1a"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-public-us-east-1a"
            },
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:subnet/subnet-0a0f1ddb2e894c95c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0f1ddb2e894c95c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540544476234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sftsrv_ire_test-testing-public-us-east-1b"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing-public-us-east-1b"
            },
            "vpc_id": "vpc-0f7fb109ce902d9bf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540544476234:vpc/vpc-0f7fb109ce902d9bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d76a8e6844cecca8",
            "default_route_table_id": "rtb-06400c0db5ee4438e",
            "default_security_group_id": "sg-0e19c480602875d76",
            "dhcp_options_id": "dopt-04e729c30aa92ad8d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f7fb109ce902d9bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06400c0db5ee4438e",
            "owner_id": "540544476234",
            "tags": {
              "Name": "sftsrv_ire_test-testing"
            },
            "tags_all": {
              "Name": "sftsrv_ire_test-testing"
            }
          }
        }
      ]
    }
  ]
}